<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F51B5"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="371dp"
        android:layout_height="212dp"
        app:layout_constraintEnd_toEndOf="@+id/txtTituloJuegodeBolsa"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/txtTituloJuegodeBolsa"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloJuegodeBolsa"
        app:srcCompat="@drawable/usstockexchange" />

    <TextView
        android:id="@+id/txtTituloJuegodeBolsa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:gravity="center"
        android:hint="@string/txtPresentacion1"
        android:textColorHint="#FFEB3B"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <EditText
        android:id="@+id/editNombreJugador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/editNombreJugador"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#3F51B5"
        android:hint="@string/btnEnviar"
        app:layout_constraintEnd_toEndOf="@+id/editNombreJugador"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="@+id/editNombreJugador"
        app:layout_constraintTop_toBottomOf="@+id/editNombreJugador" />

</android.support.constraint.ConstraintLayout>